--- a/personnages.html
+++ b/personnages.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <link rel="icon" type="image/png" href="img/icon.png">
     <meta charset="UTF-8">
     <title>Touhou - Personnages</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,27 +141,27 @@
     </section>
     <div class="character-list">
         <div class="character-card">
-            <img src="https://s1.zerochan.net/Hakurei.Reimu.600.3822067.jpg" alt="Reimu Hakurei">
+            <img src="img/reimu.jpg" alt="Reimu Hakurei">
             <strong>Reimu Hakurei</strong>
             <p>Prêtresse du sanctuaire Hakurei, héroïne principale de la série. Elle protège la frontière de Gensokyo et résout les incidents.</p>
         </div>
         <div class="character-card">
-            <img src="https://i.pinimg.com/736x/06/09/e3/0609e31a77625e82a8683fbf0be24f46.jpg" alt="Marisa Kirisame">
+            <img src="img/marisa.jpg" alt="Marisa Kirisame">
             <strong>Marisa Kirisame</strong>
             <p>Magicienne humaine énergique, amie de Reimu. Elle adore collectionner des objets rares et utilise la magie des étoiles.</p>
         </div>
         <div class="character-card">
-            <img src="https://i.pinimg.com/736x/69/8a/39/698a3976324195f9c30f6ddd18178204.jpg" alt="Sakuya Izayoi">
+            <img src="img/sakuya.jpg" alt="Sakuya Izayoi">
             <strong>Sakuya Izayoi</strong>
             <p>Servante du manoir Scarlet Devil, manipulatrice du temps. Elle est connue pour sa précision et ses couteaux.</p>
         </div>
         <div class="character-card">
-            <img src="https://i.redd.it/dpbe9cl00yf71.jpg" alt="Remilia Scarlet">
+            <img src="img/remilia.jpg" alt="Remilia Scarlet">
             <strong>Remilia Scarlet</strong>
             <p>Vampire et maîtresse du manoir Scarlet Devil. Elle est respectée et crainte pour ses pouvoirs mystérieux.</p>
         </div>
         <div class="character-card">
-            <img src="https://static.wikia.nocookie.net/tmnt-x-pokemon/images/5/5b/Cirno.jpg/revision/latest?cb=20180101005651" alt="Cirno">
+            <img src="img/cirno.jpg" alt="Cirno">
             <strong>Cirno</strong>
             <p>Fée de la glace, connue pour sa personnalité espiègle et son fameux "baka". Elle est très populaire auprès des fans.</p>
         </div>
