--- a/jeux.html
+++ b/jeux.html
@@ -173,8 +173,19 @@
                     <strong>Unconnected Marketeers (Touhou 18)</strong><br>
                     Système de cartes à collectionner qui modifient les capacités du joueur.
                 </li>
+                <li>
+                    <strong>Unfinished Dream of All Living Ghost (Touhou 19)</strong><br>
+                    Jeu de duel de tirs à la manière de Touhou 9, avec de nouveaux personnages et mécaniques compétitives.
+                </li>
+                <li>
+                    <strong>100th Black Market (Touhou 20)</strong><br>
+                    Spin-off centré sur le système de cartes à collectionner, avec des parties rapides et un gameplay renouvelé.
+                </li>
             </ul>
             <p>Il existe aussi de nombreux fangames et spin-offs officiels, explorant d'autres genres comme le combat, le puzzle ou l'aventure !</p>
+            <p>
+                À noter : Les cinq premiers jeux Touhou (Highly Responsive to Prayers, Story of Eastern Wonderland, Phantasmagoria of Dim.Dream, Lotus Land Story, Mystic Square) sont sortis sur PC-98, un ancien ordinateur japonais. Ils sont plus difficiles à trouver et à faire fonctionner aujourd'hui, mais ils posent les bases de l'univers et introduisent certains personnages emblématiques.
+            </p>
         </div>
     </section>
     <a class="back-link" href="index.html">← Retour à l'accueil</a>
