--- a/univers.html
+++ b/univers.html
@@ -134,7 +134,7 @@
         </p>
         <h2>Incidents et Héroïnes</h2>
         <p>
-            Les jeux Touhou racontent souvent la résolution d'<strong>incidents</strong> mystérieux qui troublent Gensokyo. Les héroïnes principales, comme Reimu Hakurei et Marisa Kirisame, partent enquêter et affrontent de nombreux personnages hauts en couleur.
+            Les jeux Touhou racontent souvent la résolution d'<strong>incidents</strong> mystérieux qui troublent Gensokyo. Les héroïnes principales, comme Reimu Hakurei et Marisa Kirisame, partent enquêter et affrontent de nombreux personnages.
         </p>
         <h2>Culture et Communauté</h2>
         <p>
