uptade jeux.html

--- a/jeux.html
+++ b/jeux.html
@@ -123,35 +123,35 @@
             <ul>
                 <li>
                     <strong>Embodiment of Scarlet Devil (Touhou 6)</strong><br>
-                    Premier jeu Windows de la série, introduction de nombreux personnages emblématiques.
+                    Premier jeu Windows de la série, introduction de nombreux personnages emblématiques ( Reimu, Marisa, Sakuya... ).
                 </li>
                 <li>
                     <strong>Perfect Cherry Blossom (Touhou 7)</strong><br>
-                    Connu pour ses mécaniques de scoring et ses personnages populaires comme Yuyuko et Youmu.
+                    Connu pour son système de scoring basé sur la Cherry Gauge et ses personnages populaires comme Yuyuko et Youmu.
                 </li>
                 <li>
                     <strong>Imperishable Night (Touhou 8)</strong><br>
-                    Système de duo de personnages et multiples fins selon les choix du joueur.
+                    Système de duo entre humains et yokai de personnages et multiples fins selon les choix du joueur.
                 </li>
                 <li>
                     <strong>Phantasmagoria of Flower View (Touhou 9)</strong><br>
-                    Jeu de duel de tirs, jouable à deux, avec de nombreux personnages jouables.
+                    Jeu de duel de tirs ( similaire à Touhou 3 ), jouable à deux, avec de nombreux personnages jouables.
                 </li>
                 <li>
                     <strong>Mountain of Faith (Touhou 10)</strong><br>
-                    Introduction de nouveaux personnages et d'une nouvelle région, Moriya.
+                    Introduction de Sanae,Kanako et Suwako ainsi que le sanctuaire Moriya.
                 </li>
                 <li>
                     <strong>Subterranean Animism (Touhou 11)</strong><br>
-                    Exploration des souterrains de Gensokyo, avec des mécaniques de partenaires.
+                    Exploration des souterrains de Gensokyo, avec des mécaniques de partenaires influençant le tir et certains dialogues.
                 </li>
                 <li>
                     <strong>Undefined Fantastic Object (Touhou 12)</strong><br>
-                    Système d'objets à collecter et nouveaux personnages célestes.
+                    Système d'objets à collecter et nouveaux personnages célestes comme Byakuren.
                 </li>
                 <li>
                     <strong>Ten Desires (Touhou 13)</strong><br>
-                    Introduction du système de "trance" et de nouveaux personnages issus de la mythologie japonaise.
+                    Introduction du système de "trance" et de nouveaux personnages comme Toyosatomimi no Miko et Futo.
                 </li>
                 <li>
                     <strong>Double Dealing Character (Touhou 14)</strong><br>
@@ -159,11 +159,11 @@
                 </li>
                 <li>
                     <strong>Legacy of Lunatic Kingdom (Touhou 15)</strong><br>
-                    Réputé pour sa difficulté et ses mécaniques uniques.
+                    Réputé pour sa difficulté ( surtout en mode pointdevice ) et ses mécaniques uniques.
                 </li>
                 <li>
                     <strong>Hidden Star in Four Seasons (Touhou 16)</strong><br>
-                    Mécanique de changement de saisons et nouveaux personnages.
+                    Mécanique de changement de saisons ( qui affectent le tir secondaire ) et nouveaux personnages.
                 </li>
                 <li>
                     <strong>Wily Beast and Weakest Creature (Touhou 17)</strong><br>
@@ -175,11 +175,11 @@
                 </li>
                 <li>
                     <strong>Unfinished Dream of All Living Ghost (Touhou 19)</strong><br>
-                    Jeu de duel de tirs à la manière de Touhou 9, avec de nouveaux personnages et mécaniques compétitives.
+                    Jeu de duel de tirs à la manière de Touhou 9, avec de nouveaux personnages ainsi que des duels en ligne.
                 </li>
                 <li>
-                    <strong>100th Black Market (Touhou 20)</strong><br>
-                    Spin-off centré sur le système de cartes à collectionner, avec des parties rapides et un gameplay renouvelé.
+                    <strong>Fossilized Wonders (Touhou 20)</strong><br>
+                    Retour au danmaku classique où le joueur utilise des pierres élémentaires pour personnaliser ses tirs
                 </li>
             </ul>
             <p>Il existe aussi de nombreux fangames et spin-offs officiels, explorant d'autres genres comme le combat, le puzzle ou l'aventure !</p>
