--- a/personnages.html
+++ b/personnages.html
@@ -9,20 +9,23 @@
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 0 24px; /* marge prcq sinon cest moche */
             background: linear-gradient(120deg, #3a1859 0%, #b22222 60%, #ffb6c1 100%);
             min-height: 100vh;
         }
         nav {
             background: rgba(58,24,89,0.92);
             color: #fff;
-            padding: 1em 0;
+            padding: 0.5em 0;
             box-shadow: 0 2px 12px rgba(58,24,89,0.12);
             text-align: center;
             position: sticky;
             top: 0;
             z-index: 10;
             border-radius: 0 0 18px 18px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         nav a {
             color: #fff;
@@ -32,8 +35,10 @@
             transition: color 0.2s, background 0.2s;
             padding: 0.5em 1.2em;
             border-radius: 8px;
-            margin: 0 0.2em;
+            margin: 0.4em 0.5em;
             display: inline-block;
+            min-width: 110px;
+            text-align: center;
         }
         nav a:hover, nav a:focus {
             color: #fff;
@@ -56,15 +61,15 @@
             background: #f8e8f8;
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(58,24,89,0.08);
-            padding: 2em 0.2em;
+            padding: 1.2em 0.1em; /* edit padding */
             width: 100%;
             text-align: center;
             transition: transform 0.18s;
         }
         .character-card img {
             width: 100%;
-            max-width: 200px;
-            height: 260px;           /* Plus haut que large : rectangle vertical */
+            max-width: 230px;      /* retiens les dimensions */
+            height: 300px;         
             object-fit: cover;
             border-radius: 18px;
             margin-bottom: 0.5em;
@@ -72,12 +77,15 @@
             transition: box-shadow 0.18s;
             box-shadow: 0 2px 12px #b2222222;
             aspect-ratio: unset;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         .character-card strong {
             display: block;
             margin-bottom: 0.4em;
             font-size: 1.18em;
-            min-height: 2.4em; /* Pour garder la même hauteur même si le nom est sur 2 lignes */
+            min-height: 2.4em; /* garde la meme hauteur */
             line-height: 1.2;
         }
         .character-card:hover {
@@ -100,27 +108,31 @@
             background: #b22222;
         }
         @media (max-width: 800px) {
+            body {
+                padding-left: 8px;
+                padding-right: 8px;
+            }
             .character-list {
-                grid-template-columns: 1fr 1fr; /* 2 par ligne */
+                grid-template-columns: 1fr;
                 gap: 0.7em;
-                justify-items: stretch;
+                justify-items: center;
             }
             .character-card {
-                padding: 1em 0.1em;
+                padding: 0.7em 0.05em;
                 width: 100%;
+                max-width: 320px; /* limite pour mobile  */
+                margin: 0 auto;
             }
             .character-card img {
-                width: 100%;
-                max-width: 200px;
-                height: 260px;      /* Même format rectangle vertical que sur PC */
-                object-fit: cover;
+                max-width: 230px;
+                height: 300px;
             }
         }
         section,
         section[style*="background:#fff"], 
         section[style*="background: #fff"], 
         section[style*="background:rgb(255,255,255)"] {
-            background: rgba(255, 245, 255, 0.88); /* blanc rosé semi-transparent */
+            background: rgba(255, 245, 255, 0.88); /* meme fond */
         }
     </style>
 </head>
