--- a/univers.html
+++ b/univers.html
@@ -48,7 +48,7 @@
         .univers-container {
             max-width: 800px;
             margin: 2em auto;
-            background: rgba(255, 245, 255, 0.88); /* blanc rosé semi-transparent */
+            background: rgba(255, 245, 255, 0.88); /* meme fond */
             border-radius: 16px;
             box-shadow: 0 4px 24px rgba(58,24,89,0.08);
             padding: 2.5em 2em;
@@ -88,8 +88,17 @@
             background: #b22222;
         }
         @media (max-width: 800px) {
+            nav {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                padding: 0.5em 0;
+            }
             nav a {
-                margin: 0 1em;
+                margin: 0.4em 0.5em;
+                display: inline-block;
+                min-width: 110px;
+                text-align: center;
             }
             .univers-container {
                 padding: 1.2em 0.5em;
