--- a/personnages.html
+++ b/personnages.html
@@ -26,6 +26,12 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            width: 100vw;
+            margin-left: calc(-1 * (100vw - 100%) / 2);
+            left: 50%;
+            right: 50%;
+            position: sticky;
+            box-sizing: border-box;
         }
         nav a {
             color: #fff;
