--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            width: 100vw;
+            margin-left: calc(-1 * (100vw - 100%) / 2);
+            box-sizing: border-box;
         }
         nav a {
             color: #fff;
@@ -36,25 +39,43 @@
             padding: 0.5em 1.2em;
             border-radius: 8px;
             margin: 0.4em 0.5em;
-            display: inline-block;
             min-width: 110px;
             text-align: center;
+            display: inline-block;
         }
         nav a:hover, nav a:focus {
             color: #fff;
             background: #b22222;
             text-decoration: none;
         }
+        nav button {
+            background: rgba(255,255,255,0.93);
+            color: #3a1859;
+            border: none;
+            border-radius: 8px;
+            padding: 0.5em 1.2em;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background 0.2s, color 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 0.5em;
+            margin-left: 1em;
+            font-size: 1.13em;
+            font-family: inherit;
+        }
         section {
-            background: rgba(255, 245, 255, 0.85); /* fond rosé ( je touche plus ) */
+            background: rgba(255, 245, 255, 0.85);
             margin: 2em auto;
-            max-width: 700px;
+            max-width: 820px;           /* largeur augmentée */
             border-radius: 16px;
             box-shadow: 0 4px 24px rgba(58,24,89,0.08);
-            padding: 2.5em 2em;
+            padding: 2.5em 2.2em;       /* padding un peu plus large */
             transition: box-shadow 0.2s;
-            font-size: 1.25em;           /* edit texte */
-            line-height: 1.7;            /* espace interligne */
+            font-size: 1.18em;          /* taille de police légèrement réduite pour l’équilibre */
+            line-height: 1.7;
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
         }
         section:hover {
             box-shadow: 0 8px 32px rgba(58,24,89,0.15);
@@ -99,45 +120,18 @@
         .nav-toggle, .nav-label {
             display: none;
         }
-        @media (max-width: 800px) {
-            nav {
-                padding: 0.5em 0;
-            }
-            .nav-toggle {
-                display: none;
-            }
-            .nav-label {
-                display: block;
-                cursor: pointer;
-                font-size: 2em;
-                color: #fff;
-                position: absolute;
-                top: 12px;
-                left: 18px;
-                z-index: 20;
-                background: none;
-                border: none;
-            }
-            nav .nav-links {
-                display: none;
-                flex-direction: column;
-                background: rgba(58,24,89,0.98);
-                border-radius: 0 0 18px 18px;
-                position: absolute;
-                left: 0;
-                right: 0;
-                top: 56px;
-                box-shadow: 0 4px 24px rgba(58,24,89,0.18);
-            }
-            .nav-toggle:checked + .nav-label + .nav-links {
-                display: flex;
-            }
-            nav a {
-                margin: 0.5em 0;
-                padding: 1em 0;
-                font-size: 1.15em;
-            }
-            section {                margin: 1em 1em;                padding: 1.5em 1em;            }            nav a {                margin: 0 1em;            }        }    </style></head><body>    <nav>        <a href="index.html">Accueil</a>        <a href="univers.html">Univers</a>        <a href="personnages.html">Personnages</a>        <a href="musiques.html">Musiques</a>        <a href="jeux.html">Jeux</a>        <a href="communaute.html">Communauté</a>    </nav>    <section>        <h2 style="text-align:center;">Bienvenue sur le site Touhou Chronicles !</h2>        <p style="font-size:1.18em;text-align:center;">            Dans un monde caché entre rêve et réalité, quelque part au Japon, existe Gensokyo : un sanctuaire mystique où humains, yōkai, dieux et fantômes coexistent. Là-bas, les incidents surnaturels pleuvent aussi souvent que les feuilles de cerisier, et une prêtresse armée de talismans affronte des vagues de magie pure sous forme de danses de lumière.        </p>        <p>            <strong>Touhou Project</strong>, c’est une série de jeux de tir (danmaku) créée par ZUN, mettant en scène des héroïnes aux pouvoirs impressionnants.<br>            Mais Touhou, c’est bien plus qu’un jeu :<br>            C’est un univers musical, mythologique, poétique, peuplé de yōkai espiègles, de déesses lunaires, de vampires millénaires… et de beaucoup de thé après les combats.        </p>        <p>
+    </style></head><body> <nav>
+    <a href="index.html">Accueil</a>
+    <a href="univers.html">Univers</a>
+    <a href="personnages.html">Personnages</a>
+    <a href="musiques.html">Musiques</a>
+    <a href="jeux.html">Jeux</a>
+    <a href="communaute.html">Communauté</a>
+    <button id="theme-toggle" aria-label="Changer le thème">
+        <span id="theme-icon" style="font-size:1.2em;">🌙</span>
+        <span id="theme-label">Mode sombre</span>
+    </button>
+</nav> <section>        <h2 style="text-align:center;">Bienvenue sur le site Touhou Chronicles !</h2>        <img src="img/touhou-banner.jpg" alt="Touhou Banner" style="display:block; margin:2em auto 2em auto; max-width:100%; border-radius:14px; box-shadow:0 4px 24px rgba(58,24,89,0.13);">        <p style="font-size:1.18em;text-align:center;">            Dans un monde caché entre rêve et réalité, quelque part au Japon, existe Gensokyo : un sanctuaire mystique où humains, yōkai, dieux et fantômes coexistent. Là-bas, les incidents surnaturels pleuvent aussi souvent que les feuilles de cerisier, et une prêtresse armée de talismans affronte des vagues de magie pure sous forme de danses de lumière.        </p>        <p>            <strong>Touhou Project</strong>, c’est une série de jeux de tir (danmaku) créée par ZUN, mettant en scène des héroïnes aux pouvoirs impressionnants.<br>            Mais Touhou, c’est bien plus qu’un jeu :<br>            C’est un univers musical, mythologique, poétique, peuplé de yōkai espiègles, de déesses lunaires, de vampires millénaires… et de beaucoup de thé après les combats.        </p>        <p>
             Un projet amateur devenu culte, avec une communauté immense de fans, de musiciens, d’artistes et de codeurs qui enrichissent l’univers sans fin.
         </p>
         <p>
@@ -145,4 +139,72 @@
             Si vous souhaitez des informations plus détaillées, des guides ou des précisions sur l’univers Touhou, je vous invite à consulter le 
             <a href="https://en.touhouwiki.net/wiki/Touhou_Wiki" target="_blank" style="color:#b22222;text-decoration:underline;">wiki Touhou</a> qui est très complet !
         </p>
-        <p style="text-align:center; color:#b22222; font-size:1.05em; margin-top:2em;">            Pour me contacter, vous pouvez passer par Discord : <strong>zadrip</strong>        </p>        <div class="section-link-group">            <a class="section-link" href="univers.html">Univers</a>            <a class="section-link" href="personnages.html">Personnages</a>            <a class="section-link" href="musiques.html">Musiques</a>            <a class="section-link" href="jeux.html">Jeux</a>            <a class="section-link" href="communaute.html">Communauté</a>        </div>    </section></body></html>
+        <p style="text-align:center; color:#b22222; font-size:1.05em; margin-top:2em;">            Pour me contacter, vous pouvez passer par Discord : <strong>zadrip</strong>        </p>        <div class="section-link-group">            <a class="section-link" href="univers.html">Univers</a>            <a class="section-link" href="personnages.html">Personnages</a>            <a class="section-link" href="musiques.html">Musiques</a>            <a class="section-link" href="jeux.html">Jeux</a>            <a class="section-link" href="communaute.html">Communauté</a>        </div>    </section>
+
+<script>
+const toggleBtn = document.getElementById('theme-toggle');
+const themeIcon = document.getElementById('theme-icon');
+const themeLabel = document.getElementById('theme-label');
+const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark' || (!savedTheme && prefersDark)) setDark();
+toggleBtn.onclick = function() {
+    if (document.body.classList.toggle('dark-theme')) {
+        setDark();
+        localStorage.setItem('theme', 'dark');
+    } else {
+        setLight();
+        localStorage.setItem('theme', 'light');
+    }
+};
+function setDark() {
+    document.body.classList.add('dark-theme');
+    themeIcon.textContent = '☀️';
+    themeLabel.textContent = 'Mode clair';
+    toggleBtn.style.background = 'rgba(40,24,58,0.93)';
+    toggleBtn.style.color = '#ffb6c1';
+    document.body.style.background = 'linear-gradient(120deg, #1a1029 0%, #222 60%, #3a1859 100%)';
+    document.querySelector('section').style.background = 'rgba(40,24,58,0.85)';
+    document.querySelector('section').style.color = '#eee';
+}
+function setLight() {
+    document.body.classList.remove('dark-theme');
+    themeIcon.textContent = '🌙';
+    themeLabel.textContent = 'Mode sombre';
+    toggleBtn.style.background = 'rgba(255,255,255,0.93)';
+    toggleBtn.style.color = '#3a1859';
+    document.body.style.background = 'linear-gradient(120deg, #3a1859 0%, #b22222 60%, #ffb6c1 100%)';
+    document.querySelector('section').style.background = 'rgba(255,245,255,0.85)';
+    document.querySelector('section').style.color = '';
+}
+</script>
+
+<style>
+body.dark-theme {
+    color: #e7e7ef;
+}
+body.dark-theme section {
+    background: rgba(32, 18, 40, 0.93);
+    color: #e7e7ef;
+}
+body.dark-theme h2,
+body.dark-theme .section-subtitle {
+    color: #ffb6c1;
+}
+body.dark-theme a {
+    color: #ffb6c1;
+}
+body.dark-theme p {
+    color: #e7e7ef;
+}
+body.dark-theme .section-link {
+    background: #2d1a3a;
+    color: #fff;
+}
+body.dark-theme .section-link:hover {
+    background: #b22222;
+    color: #fff;
+}
+</style>
+</body>
+</html>
