--- a/musiques.html
+++ b/musiques.html
@@ -139,10 +139,15 @@
         <a href="musiques.html">Musiques</a>
         <a href="jeux.html">Jeux</a>
         <a href="communaute.html">Communauté</a>
+        <button id="theme-toggle" aria-label="Changer le thème" style="margin-left:1em; background:rgba(255,255,255,0.93); color:#3a1859; border:none; border-radius:8px; padding:0.5em 1.2em; font-weight:bold; cursor:pointer; transition:background 0.2s; display:flex; align-items:center; gap:0.5em;">
+            <span id="theme-icon" style="font-size:1.2em;">🌙</span>
+            <span id="theme-label">Mode sombre</span>
+        </button>
     </nav>
     <section style="background:rgba(255, 245, 255, 0.88);max-width:700px;margin:2em auto 2em auto;border-radius:16px;box-shadow:0 4px 24px rgba(58,24,89,0.08);padding:2.5em 2em;">
-        <h1 style="color:#b22222;text-align:center;margin-top:0;">Musiques de Touhou</h1>
-        <p style="max-width:650px;margin:1em auto 2em auto;text-align:center;font-size:1.15em;color:#444;">
+        <h1 style="color:#ffb6c1;text-align:center;margin-top:0;">Musiques de Touhou</h1>
+        <!-- Remplace ce <p> pour le texte principal : -->
+        <p style="max-width:650px;margin:1em auto 2em auto;text-align:center;font-size:1.15em;">
             Les musiques de Touhou sont composées par ZUN et sont devenues cultes dans le monde des jeux vidéo. Elles sont célèbres pour leur énergie, leur mélodie unique et inspirent de nombreux remixes et arrangements par la communauté. Découvrez ici quelques thèmes emblématiques, et n'hésitez pas à explorer davantage sur YouTube ou le wiki !
         </p>
         <img class="music-cover" src="https://i.imgur.com/hwZGEte.jpg" alt="Touhou Music">
@@ -183,5 +188,73 @@
         </div>
     </section>
     <a class="back-link" href="index.html">← Retour à l'accueil</a>
+    <script>
+const toggleBtn = document.getElementById('theme-toggle');
+const themeIcon = document.getElementById('theme-icon');
+const themeLabel = document.getElementById('theme-label');
+const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark' || (!savedTheme && prefersDark)) setDark();
+toggleBtn.onclick = function() {
+    if (document.body.classList.toggle('dark-theme')) {
+        setDark();
+        localStorage.setItem('theme', 'dark');
+    } else {
+        setLight();
+        localStorage.setItem('theme', 'light');
+    }
+};
+function setDark() {
+    document.body.classList.add('dark-theme');
+    themeIcon.textContent = '☀️';
+    themeLabel.textContent = 'Mode clair';
+    toggleBtn.style.background = 'rgba(40,24,58,0.93)';
+    toggleBtn.style.color = '#ffb6c1';
+    document.body.style.background = 'linear-gradient(120deg, #1a1029 0%, #222 60%, #3a1859 100%)';
+    document.querySelector('section').style.background = 'rgba(40,24,58,0.85)';
+    document.querySelector('section').style.color = '#eee';
+}
+function setLight() {
+    document.body.classList.remove('dark-theme');
+    themeIcon.textContent = '🌙';
+    themeLabel.textContent = 'Mode sombre';
+    toggleBtn.style.background = 'rgba(255,255,255,0.93)';
+    toggleBtn.style.color = '#3a1859';
+    document.body.style.background = 'linear-gradient(120deg, #3a1859 0%, #b22222 60%, #ffb6c1 100%)';
+    document.querySelector('section').style.background = 'rgba(255,245,255,0.88)';
+    document.querySelector('section').style.color = '';
+}
+</script>
+
+<style>
+body.dark-theme {
+    color: #e7e7ef;
+}
+body.dark-theme section {
+    background: rgba(32, 18, 40, 0.93) !important;
+    color: #e7e7ef;
+}
+body.dark-theme h1,
+body.dark-theme h2 {
+    color: #ffb6c1;
+}
+body.dark-theme a {
+    color: #ffb6c1;
+}
+body.dark-theme p, body.dark-theme ul, body.dark-theme li {
+    color: #e7e7ef;
+}
+body.dark-theme .music-list {
+    background: none;
+}
+body.dark-theme .back-link {
+    background: #2d1a3a;
+    color: #fff;
+}
+body.dark-theme .back-link:hover {
+    background: #b22222;
+    color: #fff;
+}
+</style>
 </body>
 </html>
