--- a/personnages.html
+++ b/personnages.html
@@ -150,10 +150,16 @@
         <a href="musiques.html">Musiques</a>
         <a href="jeux.html">Jeux</a>
         <a href="communaute.html">Communauté</a>
+        <button id="theme-toggle" aria-label="Changer le thème"
+            style="margin-left:1em; background:rgba(255,255,255,0.93); color:#3a1859; border:none; border-radius:8px; padding:0.5em 1.2em; font-weight:bold; cursor:pointer; transition:background 0.2s; display:flex; align-items:center; gap:0.5em;">
+            <span id="theme-icon" style="font-size:1.2em;">🌙</span>
+            <span id="theme-label">Mode sombre</span>
+        </button>
     </nav>
+
     <section style="background:rgba(255, 245, 255, 0.88);max-width:700px;margin:2em auto 0 auto;border-radius:16px;box-shadow:0 4px 24px rgba(58,24,89,0.08);padding:2.5em 2em;">
-        <h1 style="color:#b22222;text-align:center;margin-top:0;">Personnages de Touhou</h1>
-        <p style="max-width:700px;margin:1em auto 0 auto;text-align:center;font-size:1.15em;color:#444;">
+        <h1 style="color:#ffb6c1;text-align:center;margin-top:0;">Personnages de Touhou</h1>
+        <p style="max-width:700px;margin:1em auto 0 auto;text-align:center;font-size:1.15em;">
             L'univers de Touhou regorge de personnages hauts en couleur, chacun avec sa propre histoire, ses pouvoirs et sa personnalité. Voici quelques figures emblématiques de la série, mais il en existe des dizaines d'autres à découvrir dans les jeux et les œuvres de la communauté !
         </p>
     </section>
@@ -210,5 +216,77 @@
         </div>
     </div>
      <a class="back-link" href="index.html">← Retour à l'accueil</a>
+
+     <script>
+const toggleBtn = document.getElementById('theme-toggle');
+const themeIcon = document.getElementById('theme-icon');
+const themeLabel = document.getElementById('theme-label');
+const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark' || (!savedTheme && prefersDark)) setDark();
+toggleBtn.onclick = function() {
+    if (document.body.classList.toggle('dark-theme')) {
+        setDark();
+        localStorage.setItem('theme', 'dark');
+    } else {
+        setLight();
+        localStorage.setItem('theme', 'light');
+    }
+};
+function setDark() {
+    document.body.classList.add('dark-theme');
+    themeIcon.textContent = '☀️';
+    themeLabel.textContent = 'Mode clair';
+    document.body.style.background = 'linear-gradient(120deg, #1a1029 0%, #222 60%, #3a1859 100%)';
+    document.querySelector('section').style.background = 'rgba(40,24,58,0.85)';
+    document.querySelector('section').style.color = '#eee';
+}
+function setLight() {
+    document.body.classList.remove('dark-theme');
+    themeIcon.textContent = '🌙';
+    themeLabel.textContent = 'Mode sombre';
+    document.body.style.background = 'linear-gradient(120deg, #3a1859 0%, #b22222 60%, #ffb6c1 100%)';
+    document.querySelector('section').style.background = 'rgba(255,245,255,0.88)';
+    document.querySelector('section').style.color = '';
+}
+</script>
+
+<style>
+body.dark-theme {
+    color: #e7e7ef;
+}
+body.dark-theme section {
+    background: rgba(32, 18, 40, 0.93) !important;
+    color: #e7e7ef;
+}
+body.dark-theme h1,
+body.dark-theme h2 {
+    color: #ffb6c1;
+}
+body.dark-theme a {
+    color: #ffb6c1;
+}
+body.dark-theme p, body.dark-theme ul, body.dark-theme li {
+    color: #e7e7ef;
+}
+body.dark-theme .character-card {
+    background: #2d1a3a;
+}
+body.dark-theme .character-card strong {
+    color: #ffb6c1;
+}
+body.dark-theme .back-link {
+    background: #2d1a3a;
+    color: #fff;
+}
+body.dark-theme .back-link:hover {
+    background: #b22222;
+    color: #fff;
+}
+body.dark-theme #theme-toggle {
+    background: rgba(40,24,58,0.93) !important;
+    color: #ffb6c1 !important;
+}
+</style>
 </body>
 </html>
